-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0
-
None
-
9c91b850af21732aa05de2545683099363ffd909
Documentation for the following AbstractClipAnimator QML Type properties is missing:
- channelMapper
- clock
- normalizedTime
- running
- relates to
-
QT3DS-2981 Support customer project B
-
- Closed
-
For Gerrit Dashboard: QTBUG-78482 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
276512,2 | Add documentation for AbstractClipAnimator QML type properties | 5.13 | qt/qt3d | Status: MERGED | +2 | 0 |