Add documentation for AbstractClipAnimator QML type properties

Add documentation for the following QML properties: channelMapper,
clock, normalizedTime, running.

Task-number: QTBUG-78482
Change-Id: I1c24b5f9cbf647eda6f7bb329c58e496dcb22f4a
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>